--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CertifVault Pro | Intelligence Edition</title>
+    <title>Korchi Abdelaziz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
-            theme: { extend: { colors: { brand: '#FACC15', darkBg: '#0F172A', darkCard: '#1E293B' } } }
+            theme: { extend: { colors: { brand: 'rgba(143, 91, 217, 1)', darkBg: '#0F172A', darkCard: '#1E293B' } } }
         }
     </script>
     <style>
@@ -57,7 +57,7 @@
     <nav id="main-nav" class="glass-nav sticky top-0 z-50 p-4">
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center gap-2 font-black text-2xl text-brand italic tracking-tighter uppercase">
-                <i data-lucide="zap"></i> CERTIFVAULT
+                <i data-lucide="zap"></i> Korchi Abdelaziz
             </div>
             <div id="nav-actions" class="flex gap-4">
                 <button onclick="switchView('visitor')"
